<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Track manager</string>
    <string name="loading">Loading...</string>
    <string name="no_data">No data</string>
    <string name="error">Error loading data</string>
    <string name="mileage">%.2f km</string>
    <string name="status" formatted="false">Mileage: %.2f km\nEngine time: %s\nAverage speed: %.2f kmh\n</string>
    <string name="status_notime" formatted="false">Mileage: %.2f km\n</string>
    <string name="short_status" formatted="false">Engine time: %s\nAverage speed: %.2f kmh\n</string>
    <string name="m_format" formatted="false">%d min</string>
    <string name="hm_format" formatted="false">%d h %02d min</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="kmh">kmh</string>
    <string name="saved">Saved</string>
    <string name="day">Select day</string>
    <string name="preferences">Preferences</string>
    <string name="traffic">Show speed</string>
    <string name="about">About</string>
    <string name="version">Version:</string>
    <string name="delete">Delete</string>
    <string name="remove_warn">This track contains too few points with valid GPS position\nRemove it?</string>
    <string name="files">Files</string>
    <string name="google">Google</string>
    <string name="osm">OSM</string>
    <string name="yandex">Yandex</string>
    <string name="beer">Beer for developer</string>
    <string name="save_format">Save track format</string>
    <array name="save_formats">
        <item>GPX</item>
        <item>PLT</item>
    </array>
    <string name="shot">Screenshot</string>
</resources>
