<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/first_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <ListView
        android:id="@+id/tracks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/remove_warn"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:text="@string/remove_warn"
        android:visibility="gone"
        android:layout_weight="1"
        android:gravity="bottom" />

    <Button
        android:id="@+id/delete"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/delete"
        android:visibility="gone"
        android:gravity="center" />

</LinearLayout>